fix: :wheelchair: improve accessibility in dark mode

--- a/src/components/about/AboutMe.css
+++ b/src/components/about/AboutMe.css
@@ -217,3 +217,9 @@
     width: 48%;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .about-subtitle > span {
+    color: var(--color-dark);
+  }
+}
